--- a/assets/style.css
+++ b/assets/style.css
@@ -9,40 +9,70 @@ nav{
     height: 50px;
     width: 100%;
     margin:auto;
+    color:rgb(7, 168, 168);
+    font-size: bold;
    
 }
 
 .nav-h1{
     display: flex;
     float: left;
-    width: 40%;
-    padding-left: 30px;
-   padding-top: 10px;
-  
+    margin-right: auto;
+    margin-top: 4px;
+    width: 10%;
+    height: 35px;
+    padding-left: 40px;
+   padding-top: 6px;
+   background-color:rgb(7, 168, 168);
+   color: rgb(78, 78, 78) ;
+   font-size: larger;
+   
     
 }
 
 .nav-link{
     display: flex;
-    color: black;
+   
     justify-content:flex-end;
     gap:calc(20px);
     justify-items: center;
     width: 60%;
-    
+    text-decoration: 4px underline;
+    text-decoration-color: rgb(7, 168, 168);
     .link{
         margin-right: 10px;
         padding-top:10px;
-    
      }
  }  
-
- 
-
 
 header{
     background-image: url("./images/header.jpg");
     height: 140px;
+}
 
+.about-section{
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    
 
+}
+
+.about-me h1{
+    display: flex;
+    justify-content: flex-end;
+    width: 20%;
+    height: 300px ;
+    float: left;
+    box-shadow: 6px 0px gray;
+    padding-right: 25px;
+              
+
+}
+.about-me pre{
+    display: flex;
+    max-width: 89%;
+    background-color: aquamarine;
+    float: right;
 }
