--- a/assets/style.css
+++ b/assets/style.css
@@ -1,78 +1,117 @@
-body{
-    font-size: 20px;
+body {
+  font-size: 20px;
 }
 
-nav{
-    display: flex;
-    justify-content: end;
-    background-color: rgba(73, 27, 9, 0.781);
-    height: 50px;
-    width: 100%;
-    margin:auto;
-    color:rgb(7, 168, 168);
-    font-size: bold;
-   
+nav {
+  display: flex;
+  justify-content: end;
+  background-color: rgba(73, 27, 9, 0.781);
+  height: 50px;
+  width: 100%;
+  margin: auto;
+  color: rgb(7, 168, 168);
+  font-size: bold;
 }
 
-.nav-h1{
-    display: flex;
-    float: left;
-    margin-right: auto;
-    margin-top: 4px;
-    width: 10%;
-    height: 35px;
-    padding-left: 40px;
-   padding-top: 6px;
-   background-color:rgb(7, 168, 168);
-   color: rgb(78, 78, 78) ;
-   font-size: larger;
-   
-    
+.nav-h1 {
+  display: flex;
+  float: left;
+  margin-right: auto;
+  margin-top: 4px;
+  width: 10%;
+  height: 35px;
+  padding-left: 40px;
+  padding-top: 6px;
+  background-color: rgb(7, 168, 168);
+  color: rgb(78, 78, 78);
+  font-size: larger;
 }
 
-.nav-link{
-    display: flex;
-   
-    justify-content:flex-end;
-    gap:calc(20px);
-    justify-items: center;
-    width: 60%;
-    text-decoration: 4px underline;
-    text-decoration-color: rgb(7, 168, 168);
-    .link{
-        margin-right: 10px;
-        padding-top:10px;
-     }
- }  
+.nav-link {
+  display: flex;
 
-header{
-    background-image: url("./images/header.jpg");
-    height: 140px;
+  justify-content: flex-end;
+  gap: calc(20px);
+  justify-items: center;
+  width: 60%;
+  text-decoration: 4px underline;
+  text-decoration-color: rgb(7, 168, 168);
+  .link {
+    margin-right: 10px;
+    padding-top: 10px;
+  }
 }
 
-.about-section{
-    display:flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    width: 100%;
-    
-
+header {
+  background-image: url("./images/header.jpg");
+  height: 140px;
 }
 
-.about-me h1{
-    display: flex;
-    justify-content: flex-end;
-    width: 20%;
-    height: 300px ;
-    float: left;
-    box-shadow: 6px 0px gray;
-    padding-right: 25px;
-              
-
+.about-me {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  /* background-color: darkgray; */
 }
-.about-me pre{
-    display: flex;
-    max-width: 89%;
-    background-color: aquamarine;
-    float: right;
+.title-bio {
+  display: flex;
+  justify-content: flex-end;
+  height: 300px;
+  width: 15%;
+  margin: 50px 3px 3px 100px;
+  float: left;
+  box-shadow: 6px 0px gray;
+}
+.bio {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin: 50px 45px 0px 40px;
+  flex-wrap: wrap;
+  width: 70%;
+  /* background-color: aquamarine; */
+  float: right;
+}
+
+.work-section {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.work-title {
+  display: flex;
+  justify-content: flex-end;
+  height: 300px;
+  width: 15%;
+  margin: 20px 3px 3px 100px;
+  float: left;
+  box-shadow: 6px 0px gray;
+}
+
+.work {
+  display: flex;
+  padding-right: 30px;
+  margin: 20px 45px 0px 40px;
+  width: 70%;
+  height: 300px;
+  background-image: url("./images/mern.png");
+
+  float: right;
+  border: 6px solid rgb(129, 192, 215);
+}
+.work:hover {
+  filter: brightness(120%);
+}
+.work-sub {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  margin-top:auto;
+  margin-bottom: 20px;
+  padding:25px 10px 0px 0px;
+  height: 50px;
+  background-color: aquamarine;
 }
