--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,7 @@
 body {
   font-size: 20px;
+  /* background-color: black;
+  color: white; */
 }
 
 nav {
@@ -78,24 +80,29 @@ header {
 .work-section {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   width: 100%;
 }
 
 .work-title {
   display: flex;
+  /* flex-direction: column; */
   justify-content: flex-end;
-  height: 300px;
-  width: 15%;
-  margin: 20px 3px 3px 100px;
+  height: 670px;
+  min-width: 15%;
+  margin: 20px 3px 3px 95px;
   float: left;
   box-shadow: 6px 0px gray;
 }
 
 .work {
   display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  flex-grow: 1;
   padding-right: 30px;
-  margin: 20px 45px 0px 40px;
-  width: 70%;
+  margin: 20px 38px 0px 34px;
+  /* min-width: 70%; */
   height: 300px;
   background-image: url("./images/mern.png");
 
@@ -108,10 +115,83 @@ header {
 .work-sub {
   display: flex;
   flex-direction: column;
-  justify-content: end;
-  margin-top:auto;
+  justify-content: flex-end;
+  margin-top: auto;
   margin-bottom: 20px;
-  padding:25px 10px 0px 0px;
+  padding: 25px 10px 0px 0px;
   height: 50px;
   background-color: aquamarine;
+}
+
+ .project-section {
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  justify-content: space-evenly; 
+  margin-bottom: 100px;
+ 
+} 
+
+.project {
+  display: flex;
+  /* flex-direction: row; */
+  margin-bottom: 6px;
+  min-width: 33rem;
+  margin-top:1rem;
+  height: 150px;
+  filter: blur(0.5px);
+}
+.project:hover {
+  filter: brightness(120%);
+}
+
+.item-1{
+  display: flex;
+  background-image:url(./images/smart-shop.png);
+  border: 6px solid rgb(129, 192, 215);
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  
+}
+
+.item-2{
+  display: flex;
+  background-image:url(./images/clock.png);
+  border: 6px solid rgb(129, 192, 215);
+}
+.item-3{
+  display: flex;
+  background-image:url(./images/pig-game.png);
+  border: 6px solid rgb(129, 192, 215);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.item-4{
+  display: flex;
+  background-image:url(./images/Guess.png);
+  border: 6px solid rgb(129, 192, 215);
+}
+.item-sub{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin-top: auto;
+  margin-bottom: 20px;
+  padding: 25px 10px 0px 0px;
+  height: 15px;
+  background-color: aquamarine;
+}
+
+.footer{
+  display: flex-box;
+  position: relative;
+  background-image: url("./images/header.jpg");
+  height: 140px;
+  margin-top:auto;
+}
+.second-section{
+  display: flex;
+  flex-direction:row ;
+  flex-wrap: wrap;
 }
