--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,7 @@
 body {
   font-size: 20px;
+  color:rgb(19, 85, 88);
+ 
   /* background-color: black;
   color: white; */
 }
@@ -58,6 +60,8 @@ header {
 .title-bio {
   display: flex;
   justify-content: flex-end;
+  color:rgb(19, 85, 88);
+  font-weight: bold;
   height: 300px;
   width: 15%;
   margin: 50px 3px 3px 100px;
@@ -73,7 +77,6 @@ header {
   margin: 50px 45px 0px 40px;
   flex-wrap: wrap;
   width: 70%;
-  /* background-color: aquamarine; */
   float: right;
 }
 
@@ -86,7 +89,8 @@ header {
 
 .work-title {
   display: flex;
-  /* flex-direction: column; */
+  color:rgb(19, 85, 88);
+  font-weight: bold;
   justify-content: flex-end;
   height: 670px;
   min-width: 15%;
@@ -120,7 +124,7 @@ header {
   margin-bottom: 20px;
   padding: 25px 10px 0px 0px;
   height: 50px;
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
 }
 
  .project-section {
@@ -128,7 +132,7 @@ header {
   flex-wrap: wrap;
   flex-grow: 1;
   justify-content: space-evenly; 
-  margin-bottom: 100px;
+  margin-bottom: 30px;
  
 } 
 
@@ -177,7 +181,7 @@ header {
   flex-direction: column;
   justify-content: flex-end;
   margin-top: auto;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   padding: 25px 10px 0px 0px;
   height: 15px;
   background-color: aquamarine;
@@ -194,4 +198,35 @@ header {
   display: flex;
   flex-direction:row ;
   flex-wrap: wrap;
+}
+
+.contact-section{
+  display: flex;
+
+}
+.contact-me{
+  display: flex;
+  color:rgb(19, 85, 88);
+  font-weight: bold;
+  justify-content: flex-end;
+  height: 80px;
+  width: 14%;
+  padding-right: 15px;
+  margin: 0px 4px 3px 95px;
+ 
+  box-shadow: 6px 0px gray;
+}
+
+
+
+.contact{
+  display:flex;
+  flex-grow: 1;
+  /* background-color: bisque; */
+  justify-content: space-evenly;
+  font-size: large;
+  font-weight: bold;
+  color:rgb(19, 85, 88);
+  padding-top: 25px;
+  text-decoration: underline;
 }
