--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,15 @@
 body {
   font-size: 20px;
   color:rgb(19, 85, 88);
+  font-family: monospace;
  
   /* background-color: black;
   color: white; */
+}
+/* reseting the colors to the initail set color */
+a:link, a:visited{
+ 
+  color:rgb(7, 168, 168);
 }
 
 nav {
@@ -47,11 +53,19 @@ nav {
 }
 
 header {
+  display: flex;
+  justify-content: flex-end;
+  padding-top:0px;
   background-image: url("./images/header.jpg");
   height: 140px;
+  h2{
+    margin-top: auto;
+    background-color:rgb(129, 192, 215);
+
+  }
 }
 
-.about-me {
+#about-me {
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -66,7 +80,7 @@ header {
   width: 15%;
   margin: 50px 3px 3px 100px;
   float: left;
-  box-shadow: 6px 0px gray;
+  /* box-shadow: 6px 0px gray; */
 }
 .bio {
   display: flex;
@@ -74,10 +88,11 @@ header {
   justify-content: center;
   padding-left: 30px;
   padding-right: 30px;
-  margin: 50px 45px 0px 40px;
+  margin: 50px 45px 0px 0px;
   flex-wrap: wrap;
   width: 70%;
   float: right;
+  box-shadow: -6px 0px gray;
 }
 
 .work-section {
@@ -99,7 +114,7 @@ header {
   box-shadow: 6px 0px gray;
 }
 
-.work {
+#work {
   display: flex;
   flex-direction: row;
   /* flex-wrap: wrap; */
@@ -108,8 +123,9 @@ header {
   margin: 20px 38px 0px 34px;
   /* min-width: 70%; */
   height: 300px;
-  background-image: url("./images/mern.png");
-
+  background-image: url("./images/smart-shop.png");
+  background-repeat: no-repeat;
+  background-size:cover;
   float: right;
   border: 6px solid rgb(129, 192, 215);
 }
@@ -124,7 +140,7 @@ header {
   margin-bottom: 20px;
   padding: 25px 10px 0px 0px;
   height: 50px;
-  /* background-color: aquamarine; */
+  background-color: rgb(129, 192, 215);
 }
 
  .project-section {
@@ -151,7 +167,8 @@ header {
 
 .item-1{
   display: flex;
-  background-image:url(./images/smart-shop.png);
+  background-image:url(./images/mern.png);
+  
   border: 6px solid rgb(129, 192, 215);
   background-repeat: no-repeat;
   background-size: cover;
@@ -184,7 +201,7 @@ header {
   /* margin-bottom: 20px; */
   padding: 25px 10px 0px 0px;
   height: 15px;
-  background-color: aquamarine;
+  background-color:rgb(129, 192, 215);
 }
 
 .footer{
@@ -219,7 +236,7 @@ header {
 
 
 
-.contact{
+#contact{
   display:flex;
   flex-grow: 1;
   /* background-color: bisque; */
