--- a/assets/style.css
+++ b/assets/style.css
@@ -58,15 +58,25 @@ nav {
 header {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
+  gap: 15px;
+
   padding-top: 0px;
   background-image: url("./images/header.jpg");
   background-repeat: repeat;
   background-size: contain;
-  height: 190px;
-  h2 {
+  height: 130px;
+  h3 {
     margin-top: auto;
     background-color: rgb(129, 192, 215);
-    padding-right: 10px;
+   
+  }
+
+  img{
+    height: 100px;
+    margin-right: 10px;
+    border-radius: 50%;
+    
   }
 }
 
